--- a/css/home.css
+++ b/css/home.css
@@ -155,7 +155,7 @@ padding: 7px 15px 0 0;
     padding-left: 30px;
     text-align: left;
     margin-top: 100px;
-    font-size: 23px;
+    font-size: 23 px;
     opacity: 0;
     animation: slide-in 2s ease-in-out forwards;
     -webkit-animation-name: midtextone;
@@ -350,6 +350,22 @@ footer{
         height: 260px;
     }
 }
+@media (max-width:1024px){
+    .nav a{
+        display: none;
+    }
+    .navbar_toggle{
+        display:block;
+        font-size: 35px;
+    }
+    .drop_down{
+         display: none;
+        text-transform: uppercase;
+    }
+    .drop_down.visible {
+        display: block;
+      }
+}
 @media (max-width: 992px){
     header img {
         width: 100px;
@@ -427,21 +443,6 @@ footer{
     }
 }
 @media (max-width: 750px){
-    /* navbar */
-    .nav a{
-        display: none;
-    }
-    .navbar_toggle{
-        display:block;
-        font-size: 35px;
-    }
-    .drop_down{
-         display: none;
-        text-transform: uppercase;
-    }
-    .drop_down.visible {
-        display: block;
-      }
       /* slider */
       .img_container img{
         height: 250px;
