--- a/css/services.css
+++ b/css/services.css
@@ -300,13 +300,7 @@
             height: 300px;
         }
     }
-    @media (max-width: 992px){
-        header img {
-            width: 100px;
-            height: 100px;
-        }
-    }
-    @media (max-width: 800px){
+    @media (max-width:1024px){
         .nav a{
             display: none;
         }
@@ -321,6 +315,14 @@
         .drop_down.visible {
             display: block;
           }
+    }
+    @media (max-width: 992px){
+        header img {
+            width: 100px;
+            height: 100px;
+        }
+    }
+    @media (max-width: 800px){
                 /* footer */
         footer{
         font-size: 8px;
@@ -438,30 +440,35 @@
     }
     @media (max-width:423px){
         .bread img{
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
         }
         .bday_cakes img{
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
         }
         .fruit_cakes img{
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
         }
         .snacks img{
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
         }
         .parfait img{
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
+        }
+    }
+    @media (max-width:419px){
+        .secondary_nav{
+            margin-left: -50px;
         }
     }
     @media (max-width:390px){
         .secondary_nav{
-            transform: scale(0.7);
-            margin-left: -80px;
+            transform: scale(0.76);
+            margin-left: -65px;
         }
         .bread img{
             width: 150px;
@@ -482,12 +489,22 @@
         .parfait img{
             width: 150px;
             height: 150px;
+        }
+    }
+    @media (max-width:356px){
+        .secondary_nav{
+            transform: scale(0.7);
+        }
+    }
+    @media (max-width:340px){
+        .secondary_nav{
+            margin-left: -80px;
         }
     }
     @media(max-width:320px){
         .secondary_nav{
-            transform: scale(0.6);
-            margin-left: -90px;
+            transform: scale(0.66);
+            margin-left: -85px;
         }
         .bread img{
             width: 100px;
@@ -510,9 +527,15 @@
             height: 100px;
         }
     }
+    @media (max-width:300px){
+        .secondary_nav{
+            transform: scale(0.6);
+         margin-left: -90px;
+        }
+    }
     @media(max-width:272px){
         .secondary_nav{
-            transform: scale(0.5);
+            transform: scale(0.56);
             margin-left: -95px;
         }
         .parent_cake_a h1{
